cabal-version:      3.4
name:               specialist
version:            0.1.0
synopsis:
  GHC plugin that detects and instruments overloaded function applications
  to get information about them during runtime.
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Finley McIlwaine
maintainer:         finley@well-typed.com
copyright:          (c) Well-Typed LLP 2023
category:           GHC
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common
  ghc-options: -Wall
  default-language: GHC2021
  default-extensions:
    RecordWildCards
    LambdaCase
  build-depends:
      base >=4.18.0.0 && < 5

library
  import: common
  hs-source-dirs: src
  exposed-modules:
      GHC.Specialist
      GHC.Specialist.Analysis
      GHC.Specialist.Analysis.DumpSpecialisations
      GHC.Specialist.Analysis.EventLog
      GHC.Specialist.Analysis.TextFile
      GHC.Specialist.Plugin
      GHC.Specialist.Plugin.Compat
      GHC.Specialist.Plugin.Initialization
      GHC.Specialist.Plugin.Instrumentation
      GHC.Specialist.Plugin.Logging
      GHC.Specialist.Plugin.Orphans
      GHC.Specialist.Plugin.Types
  build-depends:
      ghc
    , ghc-events
    , ghc-heap
    , containers
    , directory
    , mtl
    , random
    , text
  ghc-options:
    -- Make sure the location of the specialistWrapper is reported in the plugin
    -- output, for clarity
    -finfo-table-map

executable specialyze
  import: common
  hs-source-dirs: exe
  main-is: Main.hs
  other-modules:
      Commands
    , Commands.Common
    , Commands.DictProvenance
    , Commands.FindDuplicateSpecs
    , Commands.GroupNotes
    , Commands.ListNotes
    , Commands.Pragmas
    , Commands.ToSpeedscope
    , Utils
  build-depends:
      specialist
    , aeson
    , containers
    , dir-traverse
    , fgl
    , filepath
    , ghc
    , ghc-events
    , graphviz
    , hs-speedscope
    , mtl
    , optparse-applicative
    , text

test-suite test-specialist
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
      Test.Specialist
      Test.Specialist.Types
      Test.Specialist.UnitTests.T1
  build-depends:
      specialist

    , bytestring
    , directory
    , process
    , tasty
    , tasty-hunit
    , tasty-golden
  build-tool-depends:
      specialist:specialyze
    , specialist:test-T1
  ghc-options:
    -threaded

executable test-T1
  import: common
  hs-source-dirs: test/unit-tests/T1
  main-is: Main.hs
  build-depends:
      specialist
  ghc-options:
    -fplugin=GHC.Specialist
    -fplugin-opt=GHC.Specialist:f:1.0
    -fplugin-opt=GHC.Specialist:vv
    -finfo-table-map
    -fdistinct-constructor-tables
