cabal-version:      3.4
name:               specialist
version:            0.1.0
synopsis:
  GHC plugin that detects and instruments overloaded function applications
  to get information about them during runtime.
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Finley McIlwaine
maintainer:         finley@well-typed.com
copyright:          (c) Well-Typed LLP 2023
category:           GHC
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common
  ghc-options: -Wall -Wunused-packages
  default-language: GHC2021
  default-extensions:
    RecordWildCards
    LambdaCase
  build-depends:
      base >=4.18.0.0 && < 5

library
  import: common
  hs-source-dirs: src
  exposed-modules:
      GHC.Specialist
      GHC.Specialist.Analysis
      GHC.Specialist.Analysis.DumpSpecialisations
      GHC.Specialist.Analysis.EventLog
      GHC.Specialist.Analysis.TextFile
      GHC.Specialist.Plugin
      GHC.Specialist.Plugin.Compat
      GHC.Specialist.Plugin.Initialization
      GHC.Specialist.Plugin.Instrumentation
      GHC.Specialist.Plugin.Logging
      GHC.Specialist.Plugin.Orphans
      GHC.Specialist.Plugin.Types
  build-depends:
      ghc
    , ghc-events
    , ghc-heap
    , containers
    , directory
    , mtl
    , random
    , text
  ghc-options:
    -- Make sure the location of the specialistWrapper is reported in the plugin
    -- output, for clarity
    -finfo-table-map

executable specialyze
  import: common
  hs-source-dirs: exe
  main-is: Main.hs
  other-modules:
      Commands
    , Commands.Common
    , Commands.DictProvenance
    , Commands.FindDuplicateSpecs
    , Commands.GroupNotes
    , Commands.ListNotes
    , Commands.Pragmas
    , Commands.ToSpeedscope
    , Utils
  build-depends:
      specialist
    , aeson
    , containers
    , dir-traverse
    , filepath
    , ghc
    , ghc-events
    , hs-speedscope
    , optparse-applicative
    , text

test-suite test-specialist
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
      Test.Specialist
      Test.Specialist.Types
      Test.Specialist.UnitTests.T1
      Test.Specialist.UnitTests.T2
      Test.Specialist.UnitTests.T3
      Test.Specialist.UnitTests.T4
      Test.Specialist.Utils
  build-depends:
      specialist

    , directory
    , process
    , tasty
    , tasty-hunit
  build-tool-depends:
      specialist:specialyze
    , specialist:test-T1
    , specialist:test-T2
    , specialist:test-T3
    , specialist:test-T4
  ghc-options:
    -threaded

common test-exe
  import: common
  build-depends:
      specialist
  ghc-options:
    -fplugin=GHC.Specialist
    -fplugin-opt=GHC.Specialist:f:1.0
    -fplugin-opt=GHC.Specialist:vv
    -finfo-table-map
    -fdistinct-constructor-tables
    -dcore-lint

executable test-T1
  import: test-exe
  hs-source-dirs: test/unit-tests/T1
  main-is: Main.hs

executable test-T2
  import: test-exe
  hs-source-dirs: test/unit-tests/T2
  main-is: Main.hs

executable test-T3
  import: test-exe
  hs-source-dirs: test/unit-tests/T3
  main-is: Main.hs

executable test-T4
  import: test-exe
  hs-source-dirs: test/unit-tests/T4
  main-is: Main.hs
