cabal-version:      3.4
name:               specialist
version:            0.1.0
synopsis:           GHC plugin that guides surgical specialization
description:        This is a GHC plugin that finds and instruments overloaded
                    calls in the source program. The instrumentation, when
                    evaluated, prints data about the calls to the event log
                    such as the provenance information of all dictionary
                    arguments referenced in the call.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Finley McIlwaine
maintainer:         finley@well-typed.com
category:           GHC
build-type:         Simple
extra-source-files: README.md
extra-doc-files:    CHANGELOG.md

common common
  ghc-options:
      -Wall
      -Wunused-packages
      -Wprepositive-qualified-module
      -Widentities
  default-language:
      GHC2021
  default-extensions:
      RecordWildCards
      LambdaCase
  build-depends:
      -- specialist currently requires unmerged features of GHC
      -- Use this 9.6 branch for compatibility:
      -- https://gitlab.haskell.org/ghc/ghc/-/tree/wip/9.6-specialist-compat
      base == 4.18.2.0

library
  import: common
  hs-source-dirs: src
  exposed-modules:
      GHC.Specialist
      GHC.Specialist.Analysis
      GHC.Specialist.Analysis.EventLog
      GHC.Specialist.Analysis.Rank
      GHC.Specialist.Analysis.SpecChains
      GHC.Specialist.Analysis.Speedscope
      GHC.Specialist.Plugin
      GHC.Specialist.Plugin.Compat
      GHC.Specialist.Plugin.Initialization
      GHC.Specialist.Plugin.Instrumentation
      GHC.Specialist.Plugin.Logging
      GHC.Specialist.Plugin.Orphans
      GHC.Specialist.Plugin.Types
  build-depends:
    , aeson
    , containers
    , directory
    , filepath
    , ghc
    , ghc-events
    , ghc-heap
    , ghc-internal
    , hs-speedscope
    , mtl
    , random
    , text
  ghc-options:
    -- Make sure the location of the specialistWrapper is reported in the plugin
    -- output, for clarity
    -finfo-table-map

executable specialyze
  import: common
  hs-source-dirs: exe
  main-is: Main.hs
  other-modules:
      Commands
      Commands.DictProvenance
      Commands.FindDuplicateSpecs
      Commands.GroupNotes
  build-depends:
    , specialist

    , containers
    , dir-traverse
    , optparse-applicative
    , text

test-suite test-specialist
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
      Test.Specialist
      Test.Specialist.Types
      Test.Specialist.UnitTests.T1
      Test.Specialist.UnitTests.T2
      Test.Specialist.UnitTests.T3
      Test.Specialist.UnitTests.T4
      Test.Specialist.Utils
  build-depends:
      specialist

    , directory
    , process
    , tasty
    , tasty-hunit
  build-tool-depends:
    , specialist:specialyze
    , specialist:test-T1
    , specialist:test-T2
    , specialist:test-T3
    , specialist:test-T4
  ghc-options:
    -threaded

common test-exe
  import: common
  build-depends:
      specialist
  ghc-options:
      -fplugin=GHC.Specialist
      -fplugin-opt=GHC.Specialist:f:1.0
      -fplugin-opt=GHC.Specialist:v
      -finfo-table-map
      -fdistinct-constructor-tables
      -dcore-lint

executable test-T1
  import: test-exe
  hs-source-dirs: test/unit-tests/T1
  main-is: Main.hs

executable test-T2
  import: test-exe
  hs-source-dirs: test/unit-tests/T2
  main-is: Main.hs

executable test-T3
  import: test-exe
  hs-source-dirs: test/unit-tests/T3
  main-is: Main.hs

executable test-T4
  import: test-exe
  hs-source-dirs: test/unit-tests/T4
  main-is: Main.hs

executable test-T5
  import: test-exe
  hs-source-dirs: test/unit-tests/T5
  main-is: Main.hs

executable test-T6
  import: test-exe
  hs-source-dirs: test/unit-tests/T6
  main-is: Main.hs
  other-modules: Class
